# skillbench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Dataset/: csgo_18k.csv  csgo_34k.csv  dataset1.csv  dataset2.json
notebooks/: trueskill_sensitivity.ipynb
output/: large_search.pkl  random_split.pkl  results.pkl  results_leastseen.pkl  results_leastseen_players.pkl  results_mostseen_players.pkl  results_weighted.pkl  ts_search1.pkl  ts_search2.pkl  ts_search3.pkl  tsp_search1.pkl  tsp_search2.pkl  tsp_search3.pkl  weighted_test.pkl
scripts/: data_agreement.py  eval_emulators.py  eval_generic.py  eval_trueskill.py  eval_trueskill_players.py  eval_winrate.py  large_search.py  main.py  plot_eval_results.py  search.py
skillbench/: __init__.py  acquirer.py  data.py  download.py  emulator.py  simulator.py
skillbench/acquirers/: __init__.py  ce_af.py  cheating_af.py  least_seen_af.py  least_seen_players_af.py  likeliest_draw_af.py  likeliest_win_af.py  most_seen_af.py  random_af.py  trueskill_af.py  trueskillplayers_af.py  weighted_af.py  weighted_overengineer_af.py
skillbench/emulators/: __init__.py  elo.py  glicko2.py  random.py  static.py  trueskill.py  trueskill_players.py  trueskill_teams.py  winrate.py
src/: main.py
src/data/: download.py  match.py
src/emulation/: emu_trueskill.py  emulator.py
src/simulation/: simulator.py
